include_HEADERS = chunky.hpp

ACLOCAL_AMFLAGS = -I m4
AM_CXXFLAGS= -Wall -Wextra -Werror

AM_CPPFLAGS =
AM_LDFLAGS =
LDADD =

AM_CPPFLAGS += $(BOOST_CPPFLAGS)
AM_LDFLAGS  += $(BOOST_LOG_LDFLAGS) $(BOOST_SYSTEM_LDFLAGS) $(BOOST_UNIT_TEST_FRAMEWORK_LDFLAGS)
LDADD       += $(BOOST_LOG_LIBS) $(BOOST_SYSTEM_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIBS)

AM_CPPFLAGS += $(LIBCURL_CPPFLAGS)
LDADD       += $(LIBCURL)

AM_LDFLAGS  += $(OPENSSL_LDFLAGS)
LDADD       += $(OPENSSL_LIBS)

TESTS = curl_tests
check_PROGRAMS = curl_tests
curl_tests_SOURCES = curl_tests.cpp

noinst_PROGRAMS = simple
simple_SOURCES = simple.cpp

if HAS_OPENSSL
  noinst_PROGRAMS += tls websocket
  tls_SOURCES = tls.cpp
  websocket_SOURCES = websocket.cpp
endif

EXTRA_DIST = COPYING INSTALL NOTICE README.md
